--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,6 +272,8 @@ input[type=submit] {
         clear:both;
         text-align:center;
         font-size: 20px;
+        width:100%;
+        position: static;
     }
     nav{
 
